syntax = "proto3";
package layer.dispute;

import "layer/dispute/voter_classes.proto";

option go_package = "github.com/tellor-io/layer/x/dispute/types";

message Tally {
  
  VoterClasses forVotes = 1; 
  VoterClasses againstVotes = 2; 
  VoterClasses Invalid = 3;
}

message VoteCounts {
  uint64 support = 1;
  uint64 against = 2;
  uint64 invalid = 3;
}

message FormattedVoteCounts {
  string support = 1;
  string against = 2;
  string invalid = 3;
}

message GroupTally {
  FormattedVoteCounts voteCount = 1;
  uint64 totalPowerVoted = 2;
  uint64 totalGroupPower = 3;
}

message CombinedTotal {
  string support = 1;
  string against = 2;
  string invalid = 3;
}

